tests/NormalTests/paczka1/small_fuzzy/44042968.err
Error in line 5: F95e S106 48,8
Error in line 7: hfSiAmj S88 21,1
